--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.99"
-clap = { version = "4.5.45", features = ["derive"] }
+clap = { version = "4.5.45", features = ["derive", "string"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 rusqlite_migration = "2.3.0"
 sha-rs = "0.1.0"
