--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ anyhow = "1.0.99"
 clap = { version = "4.5.45", features = ["derive", "string"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 rusqlite_migration = "2.3.0"
-sha-rs = "0.1.0"
+sha2 = "0.10.9"
 
 [dev-dependencies]
 assert_cmd = "2.0"
