--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,11 @@ clap = { version = "4.5.45", features = ["derive", "string"] }
 rusqlite = { version = "0.37.0", features = ["bundled"] }
 rusqlite_migration = "2.3.0"
 sha2 = "0.10.9"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 
 [dev-dependencies]
 assert_cmd = "2.0"
+predicates = "3.1.3"
 rand = "0.9.2"
 temp-dir = "0.1.16"
