--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "anytaggy"
 version = "0.1.0"
 edition = "2024"
 
+[profile.release]
+codegen-units = 1
+lto = "fat"
+opt-level = "z"
+panic = "abort"
+
 [dependencies]
 anyhow = "1.0.99"
 clap = { version = "4.5", features = ["derive", "string"] }
