--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,6 +17,11 @@ jobs:
     - uses: actions/checkout@v4
     - name: Check format
       run: cargo fmt --check
+    - name: Clippy check
+      env:
+        RUSTFLAGS: "-Dwarnings"
+      run: cargo clippy --all-targets --all-features
+      
   tests:
     runs-on: ubuntu-latest
 
